# trading-champs

./: .env.example  .env.vercel  .env.vercel-pull  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  design-philosophy.md  pyproject.toml  requirements.txt  trading-champs-fqtdmgxa7-draiwing  vercel.json
.context/: dashboard-redesign-20260402.md
.github/workflows/: ci.yml  deploy.yml
agents/: AGENTS.md  SOUL.md
agents/ceo/: HEARTBEAT.md  RESPONSIBILITIES.md  TOOLS.md
agents/engineer/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
api/: index.py
n8n/workflows/: orchestrator-iterate.json
scripts/: backtest_ma_optimization.py  cleanup_watchlist_duplicates.py  deploy_n8n_workflow.py  migrate_loop_state_to_supabase.py  monitor_deploy.sh  run_dashboard.py  run_migrations.py  seed_watchlist.py  seed_watchlist_api.py
src/trading_champs/: __init__.py
src/trading_champs/core/: __init__.py  (+12 more)
supabase/migrations/: 001_initial_schema.sql  002_watchlist_symbols.sql  003_loop_state_tables.sql  004_seed_watchlist_symbols.sql  005_fix_watchlist_duplicates.sql  006_enforce_watchlist_unique.sql  007_add_hk_asset_class.sql  008_backfill_watchlist_metadata.sql  009_add_dry_run_positions.sql
tasks/: strategy-view-redesign-plan.md
tests/: __init__.py  conftest.py  test_api_index.py  test_data_pipeline.py  test_drift_detector.py  test_dry_run_connector.py  test_engine.py  test_executor.py  test_executor_dry_run.py  test_loop_state.py  test_orchestrator_iterate_all.py  test_orchestrator_watchlist_integration.py  test_pl.py  test_risk.py  test_signals.py  test_stage_evaluator.py  test_watchlist_api.py  test_watchlist_repository.py  test_web.py
(+53 files in other folders)
